--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,21 +3,18 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
-    "@react-native"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest"
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
-  "plugins": ["@typescript-eslint", "react"],
+  "extends": ["standard-with-typescript", "plugin:react/recommended", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "react-native"],
   "rules": {
-    "indent": ["error", "tab"],
-    "linebreak-style": ["error", "windows"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
