--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
     - name: Run lint
       run: yarn lint
 
-    - name: Run testes
-      run: yarn test
+    - name: Run tests with coverage
+      run: yarn test --coverage
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage/Icov-report
     
