--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,12 @@ jobs:
     - name: Run lint
       run: yarn lint
 
-    - name: Run tests with coverage
-      run: yarn test --coverage
+    - name: Run tests
+      run: yarn test
 
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v4
+    - name: Jest coverage report
+      uses: ArtiomTr/jest-coverage-report-action@v2.0.6
       with:
-        name: coverage-report
-        path: coverage/lcov-report
+        coverage-file: ./jest-report.json
+        base-coverage-file: ./jest-report.json
     
