--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/app-distribution": "^21.7.1",
     "react": "18.3.1",
     "react-native": "0.77.0"
   },
