--- a/.github/workflows/cdistribution.yml
+++ b/.github/workflows/cdistribution.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Set up JDK (Java Development Kit)
       uses: actions/setup-java@v3
       with:
+        distribution: 'microsoft'
         java-version: '17'
 
     - name: Install Android SDK
