--- a/.github/workflows/cdistribution.yml
+++ b/.github/workflows/cdistribution.yml
@@ -38,7 +38,7 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip
         unzip commandlinetools-linux-7583922_latest.zip -d android-sdk
         echo "y" | android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=./android-sdk --update
-        echo "y" | android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=./android-sdk "platforms;android-33" "build-tools;33.0.0" "ndk;25.2.5"
+        echo "y" | android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=./android-sdk "platforms;android-35" "build-tools;35.0.0" "ndk;27.1.12297006"
 
     - name: Build Android APK
       run: |
