--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["react", "react-native"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
