--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "check-code": "yarn lint && yarn format",
+    "perf-test": "reassure",
     "start": "react-native start",
     "test": "jest"
   },
@@ -29,10 +30,12 @@
     "@react-native/babel-preset": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
+    "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "danger": "^12.3.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -44,6 +47,7 @@
     "jest": "^29.6.3",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
+    "reassure": "^1.3.2",
     "typescript": "5.3.3"
   },
   "engines": {
