--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-native": "0.77.0"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.7",
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "7.25.1",
     "@babel/preset-env": "^7.25.3",
@@ -45,6 +44,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.6.3",
+    "lefthook": "^1.10.10",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "reassure": "^1.3.2",
