--- a/.github/workflows/cdistribution.yml
+++ b/.github/workflows/cdistribution.yml
@@ -33,6 +33,19 @@ jobs:
       - name: Set execute permission on gradlew
         run: chmod +x ./android/gradlew
 
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.2
+          bundler-cache: true
+
+      - name: Install Fastlane
+        run: gem install fastlane
+
+      - name: Add Fastlane Plugins
+        run: |
+          fastlane add_plugin firebase_app_distribution
+
       - name: Fastlane Build
         run: fastlane android build
 
